<resources>
    <string name="app_name">PET MED</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat_here">chat_here</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_chat_tabbed">chat_activity_tabbed</string>
    <string name="title_activity_view_of_user">viewOfUser</string>
    <string name="title_activity_message">message_activity</string>
    <string name="product">Product :</string>
    <string name="p00_00">P00.00</string>
    <string name="description">description</string>
    <string name="details">Details:</string>
    <string name="sample">sample</string>
    <string name="todo">TODO</string>
</resources>