<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="370dp"
            android:layout_height="114dp"
            android:background="#CFE9F4"
            android:orientation="vertical"
            android:translationX="20sp"
            android:translationY="20sp"
            android:translationZ="50sp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/getimg"
                android:layout_width="79sp"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="84sp"
                android:layout_height="41sp"
                android:text="@string/product"
                android:textColor="#090909"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="90sp"
                android:translationY="-90dp" />

            <TextView
                android:id="@+id/pname"
                android:layout_width="188sp"
                android:layout_height="39sp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/sample"
                android:textAllCaps="false"
                android:textColor="#020202"
                android:textSize="20sp"
                android:textStyle="italic"
                android:translationX="180sp"
                android:translationY="-130sp" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="41sp"
                android:text="@string/details"
                android:textColor="#090909"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="90sp"
                android:translationY="-140dp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="202dp"
                android:layout_height="39dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/description"
                android:textAllCaps="false"
                android:textColor="#8F8F8F"
                android:textSize="20sp"
                android:textStyle="italic"
                android:translationX="165dp"
                android:translationY="-181dp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="90dp"
                android:layout_height="41dp"
                android:text="@string/p00_00"
                android:textColor="#CEF3754E"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="280dp"
                android:translationY="-190dp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>